--- a/style.css
+++ b/style.css
@@ -84,3 +84,21 @@ h4 {
     width:720px;
     height:420px
 }
+#spruce {
+    width:720px;
+    height: 420px
+}
+
+#Castle {
+    width:720px;
+    height:480px;
+}
+#View {
+    width:720px;
+    height:480px;
+}
+
+#Ocean {
+    width:720x;
+    height:480px;
+}
