--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p {
 }
 
 body {
-    background-color: steelblue;
+    background-color:lightseagreen;
     border-color: darkgoldenrod;
 }
 
@@ -57,17 +57,17 @@ h5 {
 
 #box3 {
     color: teal;
-    background-color: limegreen;
+    background-color: black;
 }
 
 h4 {
-    color: wheat;
-    background-color: yellowgreen;
+    color: teal;
+    background-color: black;
     font-style: oblique;
 }
 
 #footer {
-    background-color: black;
+    background-color: black ;
 }
 
 #RQ {
@@ -78,9 +78,8 @@ h4 {
 }
 
 #box4 {
-    color: teal;
-    backgound-color:lightgreen;
-    font-size: 10px;
+    color: rgb(0, 140, 255);
+    font-size: 20px;
 }
 #home {
     width:720px;
@@ -101,6 +100,6 @@ h4 {
 }
 
 #Ocean {
-    width:720x;
-    height:480px;
+    width:720px;
+    height:350px;
 }
